Made another change to try and fix issue on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,7 @@ a {
 
 .project-image {
   height: auto;
+  align-items: flex-start;
 }
 
 @media (max-width: 1000px) {
